@@ -788,4 +788,6 @@
 /^a+[a\x{200}]/8BZ
     aa
 
+/[b-d\x{200}-\x{250}]*[ae-h]?#[\x{200}-\x{250}]{0,8}[\x00-\xff]*#[\x{200}-\x{250}]+[a-z]/8BZ
+
 /-- End of testinput5 --/
